syntax = "proto3";

option java_package = "com.ianj751.gateway";
option java_outer_classname = "DadJokeProto";
option java_multiple_files = true;

service DadJokeService{
    rpc GetDadJoke(DadJokeRequest) returns (DadJokeResponse){}
}

message DadJokeRequest{
    string apiKey = 1;
}

message DadJokeResponse{
    string setup = 1;
    string punchline = 2;
}